# yapshell

./: CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: publish.yml
yapshell/: main.py  ollama_client.py  readme.md
yapshell.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
